# wechat-send-mcp

./: .gitignore  Procfile  README.md  __init__.py  __main__.py  index.js  main.py  mcp.json  mcp_http_server.py  package.json  pyproject.toml  requirements.txt  server.py
