[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-send"
version = "1.0.0"
description = "通过企业微信机器人 Webhook 接口发送文件到微信群的 MCP 服务"
authors = [
    {name = "wechat_send", email = "your-email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.25.1"
]

[project.scripts]
wechat-send = "wechat_send.__main__:main"

[project.urls]
Homepage = "https://github.com/your-username/wechat_send"
Repository = "https://github.com/your-username/wechat_send"

[tool.setuptools.packages.find]
where = ["."]
include = ["wechat_send*"]
